--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -155,11 +155,11 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_1a) %></td>
-            <td>€55</td>
+            <td>€65</td>
           </tr>
           <tr>
             <td><%= t(:price_list_1b) %></td>
-            <td>€45</td>
+            <td>€55</td>
           </tr>
         </tbody>
 
@@ -171,19 +171,19 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_2a) %></td>
-            <td>€70</td>
+            <td>€100</td>
           </tr>
           <tr>
             <td><%= t(:price_list_2b) %></td>
-            <td>€110</td>
-          </tr>
-          <tr>
-            <td><%= t(:price_list_2c) %></td>
             <td>€130</td>
           </tr>
           <tr>
-            <td><%= t(:price_list_2d) %></td>
+            <td><%= t(:price_list_2c) %></td>
             <td>€150</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_2d) %></td>
+            <td>€170</td>
           </tr>
         </tbody>
 
@@ -195,27 +195,23 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_3a) %></td>
-            <td>€100</td>
+            <td>€210</td>
           </tr>
           <tr>
             <td><%= t(:price_list_3b) %></td>
-            <td>€130</td>
+            <td>€240</td>
           </tr>
           <tr>
             <td><%= t(:price_list_3c) %></td>
-            <td>€160</td>
+            <td>€270</td>
           </tr>
           <tr>
             <td><%= t(:price_list_3d) %></td>
-            <td>€190</td>
+            <td>€390</td>
           </tr>
           <tr>
             <td><%= t(:price_list_3e) %></td>
-            <td>€40</td>
-          </tr>
-          <tr>
-            <td><%= t(:price_list_3f) %></td>
-            <td>€80</td>
+            <td>€90</td>
           </tr>
         </tbody>
 
@@ -227,13 +223,24 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_4a) %></td>
-            <td>~€100</td>
+            <td>~€120</td>
           </tr>
           <tr>
             <td><%= t(:price_list_4b) %></td>
-            <td>~€130</td>
+            <td>~€220</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_4c) %></td>
+            <td>~€150</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_4d) %></td>
+            <td>~€250</td>
           </tr>
         </tbody>
+      </table>
+
+      <table>
 
         <thead>
           <tr>
@@ -249,6 +256,14 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
             <td><%= t(:price_list_5b) %></td>
             <td>€100</td>
           </tr>
+          <tr>
+            <td><%= t(:price_list_5c) %></td>
+            <td>€120</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_5d) %></td>
+            <td>€145</td>
+          </tr>
         </tbody>
 
         <thead>
@@ -259,11 +274,11 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_6a) %></td>
-            <td>€70</td>
+            <td>€90</td>
           </tr>
           <tr>
             <td><%= t(:price_list_6b) %></td>
-            <td>~€175</td>
+            <td>~€190</td>
           </tr>
           <tr>
             <td><%= t(:price_list_6c) %></td>
@@ -279,16 +294,47 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_7a) %></td>
-            <td>~€30</td>
+            <td>~€50</td>
           </tr>
+        </tbody>
+
+        <thead>
           <tr>
-            <td><%= t(:price_list_7b) %></td>
-            <td>~€45</td>
+            <th colspan="2"><%= t(:price_list_8) %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= t(:price_list_8a) %></td>
+            <td>~€270</td>
           </tr>
         </tbody>
 
       </table>
+
+      <small>
+        <%= t(:cancellation_policy) %><br>
+        <%= t(:cancellation_policy_body_1) %>
+        <%= t(:cancellation_policy_body_2) %>
+        <%= t(:cancellation_policy_body_3) %>
+      </small>
+
     </article>
+
+    <!-- <article id="cancellation-policy">
+      <h2>
+        <%= t(:cancellation_policy) %>
+      </h2>
+      <p>
+        <%= t(:cancellation_policy_body_1) %>
+      </p>
+      <p>
+        <%= t(:cancellation_policy_body_2) %>
+      </p>
+      <p>
+        <%= t(:cancellation_policy_body_3) %>
+      </p>
+    </article> -->
 
     <article id="portrait">
       <img
@@ -301,7 +347,7 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
       >
       <small>
         © 2022 <%= t(:name) %>.
-        <%= t(:credit) %> <a href="http://nunocoelhosantos.com" target="_blank">Nuno Coelho Santos</a>.
+        <%= t(:credit) %> <a href="http://nunocoelhosantos.com" target="_blank">Nuno Coelho Santos</a>.<br>
       </small>
     </article>
 
