--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -81,10 +81,9 @@ a {
 small {
   font-size: 90%;
   opacity: 0.7;
-  line-height: 105%;
+  line-height: 125%;
   a {
     font-weight: normal;
-    // height: 18px;
   }
 }
 
@@ -274,14 +273,16 @@ section#about {
     pointer-events: inherit;
   }
   main {
-    @media only screen and (min-width: 1257px) {
+    @media only screen and (min-width: 900px) {
       position: absolute;
       top: 100px;
       left: 50%;
-      margin-left: -608.5px;
-      max-width: 1217px;
-      padding-top: 25px;
-      padding-bottom: 25px;
+      width: 100%;
+      margin-left: -50%;
+      padding: 25px;
+    }
+    @media only screen and (min-width: 1400px) {
+      padding: 25px 150px;
     }
   }
   article {
@@ -293,15 +294,16 @@ section#about {
     @media only screen and (min-width: 900px) {
       float: left;
       margin-bottom: 0;
+      max-width: inherit;
     }
   }
   article#bio {
     @media only screen and (min-width: 900px) {
-      width: 50%;
+      width: 25%;
       padding-right: 30px;
     }
-    @media only screen and (min-width: 1257px) {
-      width: 32%;
+    @media only screen and (min-width: 1400px) {
+      width: 33%;
     }
   }
   article#price-list {
@@ -309,15 +311,14 @@ section#about {
       width: 50%;
       padding-right: 0;
     }
-    @media only screen and (min-width: 1257px) {
-      width: 38%;
+    @media only screen and (min-width: 1400px) {
+      width: 33%;
     }
     table {
       width: 100%;
+      float: left;
       @media only screen and (min-width: 900px) {
-        max-width: 300px;
-        // width: 49%;
-        // display: inline-block;
+        width: 50%;
       }
       td + td {
         text-align: right;
@@ -327,20 +328,22 @@ section#about {
         }
       }
     }
+    small {
+      clear: left;
+      display: block;
+      padding-right: 30px;
+    }
   }
   article#portrait {
     padding-right: 0;
     @media only screen and (min-width: 900px) {
-      width: 33%;
-      margin-left: 33%;
-      clear: both;
-      margin-top: 50px;
+      width: 25%;
     }
-    @media only screen and (min-width: 1257px) {
+    @media only screen and (min-width: 1400px) {
       float: left;
       clear: inherit;
       margin: 0;
-      width: 25%;
+      width: 33%;
     }
     img {
       width: 100%;
