An attempt at fixing the video playback

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -9,25 +9,16 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
   >
 
   <video
-    autoplay
-    loop
-    muted
     playsinline
+    autoplay
+    muted
+    loop
     preload="auto"
-    loading="eager"
+    width="1920"
+    height="1080"
     aria-label="Promotional video for Tatsuro Ninagawa"
     poster="/images/tatsuro-ninagawa-reel-poster.jpg"
   >
-    <source
-      src="/videos/tatsuro-ninagawa-reel.webm"
-      type="video/webm"
-      media="(orientation: landscape)"
-    >
-    <source
-      src="/videos/tatsuro-ninagawa-reel.mp4"
-      type="video/mp4"
-      media="(orientation: landscape)"
-    >
     <source
       src="/videos/tatsuro-ninagawa-reel-portrait.webm"
       type="video/webm"
@@ -37,6 +28,14 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
       src="/videos/tatsuro-ninagawa-reel-portrait.mp4"
       type="video/mp4"
       media="(orientation: portrait)"
+    >
+    <source
+      src="/videos/tatsuro-ninagawa-reel.webm"
+      type="video/webm"
+    >
+    <source
+      src="/videos/tatsuro-ninagawa-reel.mp4"
+      type="video/mp4"
     >
     <p>Your browser does not support video playback.</p>
   </video>
