Update booking link, hide bio and price list

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -57,9 +57,9 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
   <p>
     <%= t(:intro) %>
   </p>
-  <p>
+  <!-- <p>
     <a href="#bio" data-action="show-bio"><%= t(:label_show_bio) %></a>
-  </p>
+  </p> -->
   <a
     class="button"
     href="http://instagram.com/i.am.tatsuro"
@@ -77,7 +77,7 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
   </a>
   <a
     class="button"
-    href="https://buchung.treatwell.de/ort/link-hair-design/?utm_source=partner&utm_medium=salon-site-embedded-book-now-widget"
+    href="https://salonkee.de/salon/nina-concept"
     target="_blank"
   >
     <img
